--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -14,14 +14,14 @@ La ferme des 3 chênes: Home
 <p class="first_para">Bienvenue sur la page d'accueil d'Oak Analytics. Ce site s'orchestre autour d'une ferme nomée "La ferme des trois chênes". Mais la ferme des trois chênes, c'est quoi exactement? </p>
 <br><br>
 <nav>
-    <img src="{{ url_for('static', filename='vache.jpg') }}" alt=image_vache class="im_vache"/>
+    <img src="{{ url_for('static', filename='vache.jpg') }}" alt=image_vache class="im_vache" title="Jolie la vache :)"/>
 </nav>
 <br>
 <section>
     <ul class="square_point">
-        <li>Une ferme remplie de veaux, vaches, génisses de race Holstein et Jersey. Ces vaches nous fournissent en lait localement et dans le respect de l'animal.</li> <br>
-        <li>Cette ferme s'occupe aussi de l'alimentation de leurs vaches, par différents champs de froment, betteraves, colza, épeautre, escourgeon, maïs, mélanges d'herbes fourragères. Le surplus est vendu afin de produire du pain, sucre, huile pour l'homme. </li> <br>
-        <li>De plus, cette ferme organise des visites permettant à n'importe qui de découvrir les activités de saison de la ferme. Si vous souhaitez plus d'informations sur la ferme des 3 Chênes, n'hésitez pas à visiter <a href="http://www.lafermedestroischenes.be/" style="color: rgb(168, 168, 255);">leur site</a>. </li> 
+        <li class="p1">Une ferme remplie de veaux, vaches, génisses de race Holstein et Jersey. Ces vaches nous fournissent en lait localement et dans le respect de l'animal.</li> <br>
+        <li class="p2">Cette ferme s'occupe aussi de l'alimentation de leurs vaches, par différents champs de froment, betteraves, colza, épeautre, escourgeon, maïs, mélanges d'herbes fourragères. Le surplus est vendu afin de produire du pain, sucre, huile pour l'homme. </li> <br>
+        <li class="p3">De plus, cette ferme organise des visites permettant à n'importe qui de découvrir les activités de saison de la ferme. Si vous souhaitez plus d'informations sur la ferme des 3 Chênes, n'hésitez pas à visiter <a href="http://www.lafermedestroischenes.be/" style="color: rgb(168, 168, 255);" title="Accédez au site" target="_blank">leur site</a>. </li> 
     </ul>
 </section>
 <br><br><br><br>
