--- a/flaskr/templates/graph.html
+++ b/flaskr/templates/graph.html
@@ -24,7 +24,7 @@ Analytics Graph
 </div>  
 
  <p id="para1" style="display: none;"> <!-- graphe montrant la pie -->
-    Ce graphe représente les vêlages occurents en pleine lune ou non. En effet, il peut être intéressant de savoir si la pleine lune influence les naissances. Certaines périodes peuvent n'avoir aucune pleine lune, il est donc possible que le graph affiche à 100% des naissances en "Autres lunes". Dans ce cas, nous avons {{ info_data["data"][0] }} naissances en pleine lune et {{ info_data["data"][1] }} naissances en Autres Lunes. Vous pouvez vous référer au code couleur pour vous rendre compte des naissances.  
+    Ce graphe représente les vêlages occurents en pleine lune ou non. En effet, il peut être intéressant de savoir si la pleine lune influence les naissances. Certaines périodes peuvent n'avoir aucune pleine lune, il est donc possible que le graphe affiche à 100% des naissances en "Autres lunes". Dans ce cas, nous avons {{ info_data["data"][0] }} naissances en pleine lune et {{ info_data["data"][1] }} naissances en Autres Lunes. Vous pouvez vous référer au code couleur pour vous rendre compte des naissances.  
 </p>
 
 <p id="para2" style="display: none;">
@@ -32,11 +32,16 @@ Analytics Graph
 </p>
 
 <p id="para3" style="display: none;">
+    {% for i in range(info_data["famille_name"]|count) %}
+        <span style="background-color: {{ info_data['color_familly'][i] }}; color: {{ info_data['color_familly'][i] }} ;">LEGEND</span> {{ info_data['famille_name'][i] }}
+    {% endfor %}
+
     Ce graphe représente le nombre de naissances sur une certaine période de temps. Dans ce cas-ci, cela se passe entre le {{ info_data["start_time"] }} et le {{ info_data["end_time"] }}. Durant cette période, nous avons un total de {{ info_data["somme"] }} naissances . Il est interessant de voir que certains jours ont un plus grand nombre de naissances que d'autres. En effet, certains jours ne sont mêmes pas affichés alors que d'autres dans ce cas ci affichent jusqu'à {{ info_data["maximum"] }} naissances.  
+
 </p>
 
 <p id="para4" style="display: none;">
-    Ce graphe représente le nombre de femelles et de males dans la ferme depuis la création de celle-ci. Ce simple graphe permet facilement de se faire une idée de la répartition des sexes qu'il y a / qu'il y a eu dans la ferme. Dans ce cas-ci, nous avons {{ info_data["somme"] }} animaux évalués, contenant {{ info_data["data"][0] }} femelles et {{ info_data["data"][1] }} mâles. 
+    Ce graphe représente le nombre de femelles et de mâles dans la ferme depuis la création de celle-ci. Ce simple graphe permet facilement de se faire une idée de la répartition des sexes qu'il y a / qu'il y a eu dans la ferme. Dans ce cas-ci, nous avons {{ info_data["somme"] }} animaux évalués, contenant {{ info_data["data"][0] }} femelles et {{ info_data["data"][1] }} mâles. 
 </p>
 
 
