--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header id="header">
-    <a href="http://127.0.0.1:5000/home" class = "home">Home</a>
+    <a href="http://127.0.0.1:5000/home" class = "home" style="text-shadow: 2px 2px 10px black;">Home</a>
     <af>
       <li><a href="http://127.0.0.1:5000/analytics" class="active">Analytics</a> </li>
       <li><a href="#footer">Contacts</a> </li>
