--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -19,7 +19,7 @@ La ferme des 3 chênes: Home
 <br>
 <section>
     <ul class="square_point">
-        <li class="p1">Une ferme remplie de veaux, vaches, génisses de race Holstein et Jersey. Ces vaches nous fournissent en lait localement et dans le respect de l'animal.</li> <br>
+        <li class="p1">Une ferme remplie de veaux, vaches, génisses de race Holstein, Jersey et Blanc Bleu Belge. Ces vaches nous fournissent en lait localement et dans le respect de l'animal.</li> <br>
         <li class="p2">Cette ferme s'occupe aussi de l'alimentation de leurs vaches, par différents champs de froment, betteraves, colza, épeautre, escourgeon, maïs, mélanges d'herbes fourragères. Le surplus est vendu afin de produire du pain, sucre, huile pour l'homme. </li> <br>
         <li class="p3">De plus, cette ferme organise des visites permettant à n'importe qui de découvrir les activités de saison de la ferme. Si vous souhaitez plus d'informations sur la ferme des 3 Chênes, n'hésitez pas à visiter <a href="http://www.lafermedestroischenes.be/" style="color: rgb(168, 168, 255);" title="Accédez au site" target="_blank">leur site</a>. </li> 
     </ul>
